# QCodeEditor

./: .gitignore  CMakeLists.txt  QCodeEditor.lib
example/: CMakeLists.txt
example/src/: MainWindow.cpp
src/internal/: QCodeEditor.cpp  QLanguage.cpp
